@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import edu.tcu.cs.peerevalbackend.section.dto.SectionDto;
 import edu.tcu.cs.peerevalbackend.student.dto.StudentDto;
 import edu.tcu.cs.peerevalbackend.system.StatusCode;
+import edu.tcu.cs.peerevalbackend.system.exception.ObjectNotFoundException;
 import edu.tcu.cs.peerevalbackend.team.dto.TeamDto;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.AfterEach;
@@ -20,6 +21,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.BDDMockito.given;
@@ -65,11 +67,11 @@ public class StudentControllerTest {
 
         Student s3 = new Student();
         s3.setStudentId(3);
-        s1.setFirstName("Asher");
-        s1.setMiddleInitial("D");
-        s1.setLastName("OConnor");
-        s1.setAcademicYear("2024");
-        s1.setPassword("1518123");
+        s3.setFirstName("Asher");
+        s3.setMiddleInitial("D");
+        s3.setLastName("OConnor");
+        s3.setAcademicYear("2024");
+        s3.setPassword("1518123");
         this.students.add(s3);
     }
     @AfterEach
@@ -83,41 +85,41 @@ public class StudentControllerTest {
         given(this.studentService.findAll()).willReturn(this.students);
 
         // When and then
-        this.mockMvc.perform(get("/peereval/students").accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(get("/peereval/student").accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(true))
                 .andExpect(jsonPath("$.code").value(StatusCode.SUCCESS))
-                .andExpect(jsonPath("$.message").value("Find All Success"))
+                .andExpect(jsonPath("$.message").value("Found all students"))
                 .andExpect(jsonPath("$.data", Matchers.hasSize(this.students.size())))
                 .andExpect(jsonPath("$.data[0].id").value(1))
-                .andExpect(jsonPath("$.data[0].name").value("Albus Dumbledore"))
+                .andExpect(jsonPath("$.data[0].firstName").value("Mason"))
                 .andExpect(jsonPath("$.data[1].id").value(2))
-                .andExpect(jsonPath("$.data[1].name").value("Harry Potter"));
+                .andExpect(jsonPath("$.data[1].firstName").value("Jake"));
     }
 
     @Test
     void testFindStudentByIdSuccess() throws Exception {
         // Given.
-        given(this.studentService.findById(1)).willReturn(this.students.get(0));
+        given(this.studentService.findById(1)).willReturn(this.students.getFirst());
 
         // When and then
-        this.mockMvc.perform(get("/peereval/students/1").accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(get("/peereval/student/1").accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(true))
                 .andExpect(jsonPath("$.code").value(StatusCode.SUCCESS))
-                .andExpect(jsonPath("$.message").value("Find One Success"))
+                .andExpect(jsonPath("$.message").value("Successfully found student"))
                 .andExpect(jsonPath("$.data.id").value(1))
-                .andExpect(jsonPath("$.data.name").value("Albus Dumbledore"));
+                .andExpect(jsonPath("$.data.firstName").value("Mason"));
     }
 
     @Test
     void testFindStudentByIdNotFound() throws Exception {
         // Given.
-        given(this.studentService.findById(5)).willThrow(new StudentNotFoundException(5));
+        given(this.studentService.findById(5)).willThrow(new ObjectNotFoundException("Student",5));
 
         // When and then
-        this.mockMvc.perform(get("/peereval/students/5").accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(get("/peereval/student/5").accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(false))
                 .andExpect(jsonPath("$.code").value(StatusCode.NOT_FOUND))
-                .andExpect(jsonPath("$.message").value("Could not find student with Id 5"))
+                .andExpect(jsonPath("$.message").value("Could not find Student with Id 5 :("))
                 .andExpect(jsonPath("$.data").isEmpty());
     }
     @Test
@@ -134,48 +136,48 @@ public class StudentControllerTest {
         given(this.studentService.addStudent(Mockito.any(Student.class))).willReturn(savedStudent);
 
         // When and then
-        this.mockMvc.perform(post("/peereval/students").contentType(MediaType.APPLICATION_JSON).content(json).accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(post("/peereval/student").contentType(MediaType.APPLICATION_JSON).content(json).accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(true))
                 .andExpect(jsonPath("$.code").value(StatusCode.SUCCESS))
-                .andExpect(jsonPath("$.message").value("Add Success"))
-                .andExpect(jsonPath("$.data.studentId").isNotEmpty())
+                .andExpect(jsonPath("$.message").value("Successfully saved student"))
+                .andExpect(jsonPath("$.data.id").isNotEmpty())
                 .andExpect(jsonPath("$.data.firstName").value("Hermione"));
     }
     @Test
     void testUpdateStudentSuccess() throws Exception {
-        StudentDto studentDto = new StudentDto(null, "Mason", "D","OConnor", "2024", 15, "team","section");
+        StudentDto studentDto = new StudentDto(1, "Mason", "D","OConnor", "2024", 15, "team","section");
 
         Student updatedStudent = new Student();
         updatedStudent.setStudentId(1);
-        updatedStudent.setFirstName("Updated student name");
+        updatedStudent.setFirstName("Jake");
 
-        String json = this.objectMapper.writeValueAsString(updatedStudent);
+        String json = this.objectMapper.writeValueAsString(studentDto);
 
         // Given.
         given(this.studentService.updateStudent(eq(1), Mockito.any(Student.class))).willReturn(updatedStudent);
 
         // When and then
-        this.mockMvc.perform(put("/peereval/students/1").contentType(MediaType.APPLICATION_JSON).content(json).accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(put("/peereval/student/1").contentType(MediaType.APPLICATION_JSON).content(json).accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(true))
                 .andExpect(jsonPath("$.code").value(StatusCode.SUCCESS))
-                .andExpect(jsonPath("$.message").value("Update Success"))
+                .andExpect(jsonPath("$.message").value("Successfully updated student"))
                 .andExpect(jsonPath("$.data.id").value(1))
-                .andExpect(jsonPath("$.data.firstName").value("Updated student name"));
+                .andExpect(jsonPath("$.data.firstName").value("Jake"));
     }
     @Test
     void testUpdateStudentErrorWithNonExistentId() throws Exception {
         // Given.
-        given(this.studentService.updateStudent(eq(5), Mockito.any(Student.class))).willThrow(new StudentNotFoundException(5));
+        given(this.studentService.updateStudent(eq(5), Mockito.any(Student.class))).willThrow(new ObjectNotFoundException("Student",5));
 
         StudentDto studentDto = new StudentDto(5, "Mason", "D","OConnor", "2024", 15, "team","section");
 
         String json = this.objectMapper.writeValueAsString(studentDto);
 
         // When and then
-        this.mockMvc.perform(put("/peereval/students/5").contentType(MediaType.APPLICATION_JSON).content(json).accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(put("/peereval/student/5").contentType(MediaType.APPLICATION_JSON).content(json).accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(false))
                 .andExpect(jsonPath("$.code").value(StatusCode.NOT_FOUND))
-                .andExpect(jsonPath("$.message").value("Could not find student with Id 5"))
+                .andExpect(jsonPath("$.message").value("Could not find Student with Id 5 :("))
                 .andExpect(jsonPath("$.data").isEmpty());
     }
     @Test
@@ -184,22 +186,22 @@ public class StudentControllerTest {
         doNothing().when(this.studentService).deleteStudent(3);
 
         // When and then
-        this.mockMvc.perform(delete("/peereval/students/3").accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(delete("/peereval/student/3").accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(true))
                 .andExpect(jsonPath("$.code").value(StatusCode.SUCCESS))
-                .andExpect(jsonPath("$.message").value("Delete Success"))
+                .andExpect(jsonPath("$.message").value("Successfully deleted student"))
                 .andExpect(jsonPath("$.data").isEmpty());
     }
     @Test
     void testDeleteStudentErrorWithNonExistentId() throws Exception {
         // Given.
-        doThrow(new StudentNotFoundException(5)).when(this.studentService).deleteStudent(5);
+        doThrow(new ObjectNotFoundException("Student",5)).when(this.studentService).deleteStudent(5);
 
         // When and then
-        this.mockMvc.perform(delete("/peereval/students/5").accept(MediaType.APPLICATION_JSON))
+        this.mockMvc.perform(delete("/peereval/student/5").accept(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.flag").value(false))
                 .andExpect(jsonPath("$.code").value(StatusCode.NOT_FOUND))
-                .andExpect(jsonPath("$.message").value("Could not find student with Id 5"))
+                .andExpect(jsonPath("$.message").value("Could not find Student with Id 5 :("))
                 .andExpect(jsonPath("$.data").isEmpty());
     }
 
